--- a/software.html
+++ b/software.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
     <title>Tom Cantellow</title>
-    <meta name="Recommended Tools" content="Recommended Tools">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="assets/styles.css"> <!-- Link to external stylesheet -->
-    <script src="assets/script.js" defer></script> <!-- Link to external script -->
+    <meta name="Recommended Tools" content="Recommended Tools" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="assets/styles.css" />
+    <script src="assets/script.js" defer></script>
+    <style>
+        /* Remove underline from links */
+        a {
+            text-decoration: none;
+            color: #0066cc;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        /* Space between main categories */
+        .category {
+            margin-bottom: 2rem;
+        }
+        /* Space between list items */
+        ul.tools-list {
+            list-style-type: disc;
+            padding-left: 1.5rem;
+            margin-top: 0.5rem;
+        }
+        ul.tools-list > li {
+            margin-bottom: 0.5rem;
+        }
+        /* Category heading */
+        .category > strong {
+            font-size: 1.1rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+    </style>
 </head>
 <body>
     <div id="header-placeholder"></div>
     <script>
-        // Function to load the header
         function loadHeader() {
-            fetch('assets/header.html') // Fetch the header HTML
+            fetch('assets/header.html')
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok ' + response.statusText);
@@ -22,36 +50,43 @@
                     return response.text();
                 })
                 .then(data => {
-                    document.getElementById('header-placeholder').innerHTML = data; // Insert header into the placeholder
+                    document.getElementById('header-placeholder').innerHTML = data;
                 })
                 .catch(error => console.error('Error loading header:', error));
         }
-        // Load the header when the page loads
         window.onload = loadHeader;
     </script>
-<body>
-    <h1>Recommended Tools</h1>
-    <ul style="list-style-type:none; padding:0;">
-        <li style="margin-bottom:0;">
-            <p style="margin-bottom:5px;"><strong>Research, Mapping, and Analysis:</strong></p>
-                <li><a href="https://posit.co/" target="_blank"><strong>RStudio</strong></a> – Working environment for R, ideal for statistical computing and graphics.</li>
-                <li><a href="https://qgis.org/" target="_blank"><strong>QGIS</strong></a> – An open-source Geographic Information System for spatial analysis and mapping. Good for finishing maps before publication.</li>
-                <li><a href="https://www.zotero.org/" target="_blank"><strong>Zotero</strong></a> – Reference manager. Use with <a href="https://zotfile.com/Zotfile" target="_blank"><strong>Zotfile</strong></a> for syncing and to get around storage limitations.</li>
-                <li><a href="https://miro.com/" target="_blank"><strong>Miro</strong></a> – An online tool for creating beautiful mindmaps and flowcharts.</li>
-                <li><a href="https://mycolor.space/" target="_blank"><strong>ColorSpace</strong></a> – An online tool for creating colour palettes.</li>
-        </li>
-        <li style="margin-bottom:0;">
-            <p style="margin-bottom:5px;"><strong>General:</strong></p>
-                <li><a href="https://www.amd.com/en/technologies/ramdisk" target="_blank"><strong>AMD RAMDisk</strong></a> – Allows system RAM to function as super-fast storage for temporary files. 4GB limit on free version.</li>
-                <li><a href="https://www.unifiedremote.com/" target="_blank"><strong>Unified Remote</strong></a> – Turns a smartphone into a PC remote control. Great for presentations.</li>
-                <li><a href="https://12ft.io/" target="_blank"><strong>12ft.io</strong></a> – Paywall bypasser.</li>
-                <li><a href="https://github.com/auctors/free-lunch" target="_blank"><strong>Free Lunch</strong></a> – Awesome list of free software.</li>
-                <li><a href="https://cycle.travel/" target="_blank"><strong>Cycle.Travel</strong></a> – Bicycle route planner. Finds quiet roads.</li>
-                <li><a href="https://ninety180.com/" target="_blank"><strong>Ninety 180</strong></a> – Good visualisation tool for post-Brexit Brits. Calculate how many days you can remain in the EU.</li>
-        </li>
-    </ul>
-</body>
-        <div id="footer-placeholder"></div>
+
+    <main>
+        <h1>Recommended Tools</h1>
+
+        <section class="category">
+            <strong>Research, Mapping, and Analysis:</strong>
+            <ul class="tools-list">
+                <li><a href="https://posit.co/" target="_blank" rel="noopener noreferrer"><strong>RStudio</strong></a> – IDE for R and statistical computing.</li>
+                <li><a href="https://qgis.org/" target="_blank" rel="noopener noreferrer"><strong>QGIS</strong></a> – Open-source GIS for spatial analysis and mapping.</li>
+                <li>
+                    <a href="https://www.zotero.org/" target="_blank" rel="noopener noreferrer"><strong>Zotero</strong></a> – Reference manager; use with 
+                    <a href="https://zotfile.com/Zotfile" target="_blank" rel="noopener noreferrer"><strong>Zotfile</strong></a> for syncing and storage.
+                </li>
+                <li><a href="https://miro.com/" target="_blank" rel="noopener noreferrer"><strong>Miro</strong></a> – Online tool for mindmaps and flowcharts.</li>
+                <li><a href="https://mycolor.space/" target="_blank" rel="noopener noreferrer"><strong>ColorSpace</strong></a> – Create color palettes online.</li>
+            </ul>
+        </section>
+
+        <section class="category">
+            <strong>General:</strong>
+            <ul class="tools-list">
+                <li><a href="https://www.amd.com/en/technologies/ramdisk" target="_blank" rel="noopener noreferrer"><strong>AMD RAMDisk</strong></a> – Use RAM as fast temporary storage (4GB free limit).</li>
+                <li><a href="https://www.unifiedremote.com/" target="_blank" rel="noopener noreferrer"><strong>Unified Remote</strong></a> – Control PC via smartphone, great for presentations.</li>
+                <li><a href="https://12ft.io/" target="_blank" rel="noopener noreferrer"><strong>12ft.io</strong></a> – Bypass paywalls.</li>
+                <li><a href="https://github.com/auctors/free-lunch" target="_blank" rel="noopener noreferrer"><strong>Free Lunch</strong></a> – Curated list of free software.</li>
+                <li><a href="https://cycle.travel/" target="_blank" rel="noopener noreferrer"><strong>Cycle.Travel</strong></a> – Bicycle route planner for quiet roads.</li>
+                <li><a href="https://ninety180.com/" target="_blank" rel="noopener noreferrer"><strong>Ninety 180</strong></a> – Visualize post-Brexit EU stay days.</li>
+            </ul>
+        </section>
     </main>
+
+    <div id="footer-placeholder"></div>
 </body>
 </html>
